@@ -1,3 +1,11 @@
+Tue Jul 20 05:25:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * protocols/ace/INet/HTTP_BasicAuthentication.cpp:
+        * protocols/ace/INet/HTTP_BasicAuthentication.h:
+        * protocols/ace/INet/HTTP_BasicAuthentication.inl:
+        * protocols/ace/INet/inet.mpc:
+          Added basic support for HTTP Basic Authentication scheme.
+
 Tue Jul 20 03:56:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
 
         * protocols/ace/INet/HTTP_SessionBase.cpp:
